added new graphs

--- a/simulations/testingLocalResources/omnetpp.ini
+++ b/simulations/testingLocalResources/omnetpp.ini
@@ -202,8 +202,21 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 ##------------CAR initial position---------------
 **.car[*].mobility.initialX = uniform(0m, 500m)
+#**.car[0].mobility.initialX = 210m
+#**.car[1].mobility.initialX = 240m
+#**.car[2].mobility.initialX = 280m
+#**.car[3].mobility.initialX = 210m
+#**.car[4].mobility.initialX = 240m
+#**.car[5].mobility.initialX = 280m
+#**.car[6].mobility.initialX = 210m
+#**.car[7].mobility.initialX = 240m
+#**.car[8].mobility.initialX = 280m
+##**.car[9].mobility.initialX = 280m
+#**.car[0].mobility.initialX = 100m
 **.car[*].mobility.initialY = uniform(250m, 1000m)
-#**.car[1].mobility.initialY = 310m
+#**.car[0..2].mobility.initialY = 310m
+#**.car[2..5].mobility.initialY = 350m
+#**.car[5..8].mobility.initialY = 390m
 
 ##------------UEWarningAlertApp---------------
 *.ue[*].numApps = 2
