--- a/simulations/PervasiveVehicularComputingTesting/omnetpp.ini
+++ b/simulations/PervasiveVehicularComputingTesting/omnetpp.ini
@@ -238,6 +238,7 @@ network = simulation_examples.simulations.PervasiveVehicularComputingTesting.Per
 #**.mechost*.mecPlatform.mecService[0].typename = "LocationService"
 #**.mechost*.mecPlatform.mecService[1].typename = "ApplicationMobilityService"
 **.mechost*.mecPlatform.mecService[0].typename = "RNIService"
+**.mechost*.mecPlatform.mecService[0].monitoringInterval = 0.01s
 #
 **.mechost1.mecPlatform.mecService[*].localAddress = "mechost1.mecPlatform" #da cambiare!!
 #
