--- a/simulations/PervasiveVehicularComputingTesting/omnetpp.ini
+++ b/simulations/PervasiveVehicularComputingTesting/omnetpp.ini
@@ -9,7 +9,7 @@ cmdenv-autoflush = true
 ##########################################################
 debug-on-errors = false
 print-undisposed = true
-sim-time-limit = 60s
+sim-time-limit = 100s
 warmup-period = 0s
 repeat = 1
 seed-set = ${repetition}
@@ -49,7 +49,7 @@ network = simulation_examples.simulations.PervasiveVehicularComputingTesting.Per
 ############### CA configuration ################# 
 *.carrierAggregation.numComponentCarriers = 1
 *.carrierAggregation.componentCarrier[0].numerologyIndex = ${u=2}
-*.carrierAggregation.componentCarrier[0].carrierFrequency = 2GHz
+*.carrierAggregation.componentCarrier[0].carrierFrequency = 6GHz
 *.carrierAggregation.componentCarrier[0].numBands = ${numRbs=50}
 
 *.gNodeB*.cellularNic.numCarriers = 1
@@ -60,8 +60,10 @@ network = simulation_examples.simulations.PervasiveVehicularComputingTesting.Per
 *.car[*].cellularNic.nrChannelModel[0].componentCarrierIndex = 0
 
 # gNodeB configuration
-#**.gNodeB1.macCellId = 1
-#**.gNodeB1.macNodeId = 1
+**.gNodeB1.macCellId = 1
+**.gNodeB1.macNodeId = 1
+**.gNodeB2.macCellId = 2
+**.gNodeB2.macNodeId = 2 
 
 *.ue[*].macCellId = 0
 *.ue[*].masterId = 0
@@ -72,6 +74,8 @@ network = simulation_examples.simulations.PervasiveVehicularComputingTesting.Per
 *.car[*].nrMacCellId = 1
 *.car[*].nrMasterId = 1
 **.dynamicCellAssociation = true
+**.enableHandover = true
+**.amcMode = "D2D"
 
 ######################################################
 #													 #
@@ -144,7 +148,8 @@ network = simulation_examples.simulations.PervasiveVehicularComputingTesting.Per
 ############### BS position #################
 *.gNodeB1.mobility.initialX = 140m
 *.gNodeB1.mobility.initialY = 300m
-
+*.gNodeB2.mobility.initialX = 840m
+*.gNodeB2.mobility.initialY = 300m
 
 ############### mechost positions #################
 *.mechost1.mobility.initialX = 140m
@@ -161,35 +166,44 @@ network = simulation_examples.simulations.PervasiveVehicularComputingTesting.Per
 #extends = PervasiveComputingTesting
 ############# Deployment Configuration #############
 **.numParkedCar = ${NUMCARS=0}
-**.numUe = ${NUMUE=1}
+**.numUe = ${NUMUE=2}
 
 # MEC App configuration
-*.ue[*].numApps = 2
-*.ue[*].app[0].typename = "DeviceApp"
-*.ue[*].app[0].localPort = 4500
-*.ue[*].app[0].UALCMPAddress = "ualcmp"
-*.ue[*].app[0].UALCMPPort = 1000
-*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/SentinelApp.json"
+*.ue[0].numApps = 2
+*.ue[0].app[0].typename = "DeviceApp"
+*.ue[0].app[0].localPort = 4500
+*.ue[0].app[0].UALCMPAddress = "ualcmp"
+*.ue[0].app[0].UALCMPPort = 1000
+*.ue[0].app[0].appPackageSource = "ApplicationDescriptors/SentinelApp.json"
 
 #
-*.ue[*].app[1].typename = "MockUEApp"
-*.ue[*].app[1].mecAppName = "SentinelMecApp"
+*.ue[0].app[1].typename = "MockUEApp"
+*.ue[0].app[1].mecAppName = "SentinelMecApp"
 
-*.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
-*.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
-*.ue[*].app[1].amsPort = 10022
-*.ue[*].app[1].deviceAppPort = 4500
-*.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue[*].app[1].stopTime = 30s
+*.ue[0].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
+*.ue[0].app[1].amsAddress = "mechost1.mecPlatform"
+*.ue[0].app[1].amsPort = 10022
+*.ue[0].app[1].deviceAppPort = 4500
+*.ue[0].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
+*.ue[0].app[1].stopTime = 100s
 
 # UEs INITIAL POSITIONs
 *.ue[*].mobility.typename = "LinearMobility"
-**.ue[*].mobility.initialX = 250m
-**.ue[*].mobility.initialY = 411m
+**.ue[0].mobility.initialX = 250m
+**.ue[0].mobility.initialY = 411m
+**.ue[1].mobility.initialX = 840m
+**.ue[1].mobility.initialY = 431m
 
 
-**.ue[*].mobility.initialMovementHeading = 0deg
-**.ue[*].mobility.speed = 8mps
+**.ue[0].mobility.initialMovementHeading = 0deg
+**.ue[1].mobility.initialMovementHeading = 180deg
+**.ue[1].mobility.speed = 18mps
+
+############### X2 configuration #################
+*.gNodeB*.numX2Apps = 1                                        # one x2App per peering node
+*.gNodeB*.x2App[*].server.localPort = 5000 + ancestorIndex(1)  # Server ports (x2App[0]=5000, x2App[1]=5001, ...)
+*.gNodeB1.x2App[0].client.connectAddress = "gNodeB2%x2ppp0" 
+*.gNodeB2.x2App[0].client.connectAddress = "gNodeB1%x2ppp0" 
 
 
 # UALCMP config
