--- a/simulations/MultipleDynamicMECHosts/omnetpp.ini
+++ b/simulations/MultipleDynamicMECHosts/omnetpp.ini
@@ -37,10 +37,10 @@ output-scalar-file-append = false
 
 [Config MultipleMECHosts]
 network = simulation_examples.simulations.MultipleDynamicMECHosts.MultipleDynMecHostsNet
-sim-time-limit=60s
+sim-time-limit=100s
 
 ############# Repetition ##########################
-repeat = 1
+repeat = 5
 seed-set = ${runnumber}+1941023425 # seed changing for each simulation
 
 experiment-label = "${configname}"
@@ -52,8 +52,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 ############### CA configuration ################# 
 *.carrierAggregation.numComponentCarriers = 1
 *.carrierAggregation.componentCarrier[0].numerologyIndex = ${u=2}
-*.carrierAggregation.componentCarrier[0].carrierFrequency = 2GHz
+*.carrierAggregation.componentCarrier[0].carrierFrequency = 6GHz
 *.carrierAggregation.componentCarrier[0].numBands = ${numRbs=50}
+**.fbPeriod = 10
 
 *.gNodeB*.cellularNic.numCarriers = 1
 *.gNodeB*.cellularNic.channelModel[0].componentCarrierIndex = 0
@@ -176,15 +177,15 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 # use this for ping time comparison graph
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
-**.numParkedCar = ${NUMCARS=2}
+**.numParkedCar = ${NUMCARS=10}
 #**.numParkedCar = ${NUMCARS=10..150 step 10}
-**.numUe = ${NUMUE=50}
+**.numUe = ${NUMUE=1}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
-*.car[0].viApp.localAddress = "car[0]"
-*.car[1].viApp.localAddress = "car[1]"
-#*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
+#*.car[0].viApp.localAddress = "car[0]"
+#*.car[1].viApp.localAddress = "car[1]"
+*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
 ##*.car[1].viApp.localAddress = "car[1]"
 *.car[*].viApp.vimAddress = "mechost1.vim"
 *.car[*].viApp.vimPort = 3333
@@ -194,21 +195,39 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.car[*].app[0].localPort = 3333
 #*.car.app[0].destPort = 3333
 *.car[*].app[0].destAddress = "server" 
-*.car[0].app[0].localAddress = "car[0]"
-*.car[1].app[0].localAddress = "car[1]"
-#*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
+#*.car[0].app[0].localAddress = "car[0]"
+#*.car[1].app[0].localAddress = "car[1]"
+*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[*].app[0].parkTime = 40s
-#*.car[*].app[0].parkTime = uniform(8s, 10s)
+#*.car[*].app[0].parkTime = 40s
+*.car[*].app[0].parkTime = uniform(8s, 10s)
 
 
 ##------------CAR initial position---------------
-**.car[0].mobility.initialX = 145m# uniform(140m, 800m)
-**.car[0].mobility.initialY = 200m#uniform(220m, 250m)
-**.car[1].mobility.initialX = 800m# uniform(140m, 800m)
-**.car[1].mobility.initialY = 200m#uniform(220m, 250m)
+#**.car[*].mobility.initialX = uniform(140m, 800m)
+#**.car[*].mobility.initialY = uniform(220m, 250m)
+**.car[0].mobility.initialX = 125m# uniform(140m, 800m)
+**.car[0].mobility.initialY = 130m#uniform(220m, 250m)
+**.car[1].mobility.initialX = 145m# uniform(140m, 800m)
+**.car[1].mobility.initialY = 130m#uniform(220m, 250m)
+**.car[2].mobility.initialX = 165m# uniform(140m, 800m)
+**.car[2].mobility.initialY = 130m#uniform(220m, 250m)
+**.car[3].mobility.initialX = 125m# uniform(140m, 800m)
+**.car[3].mobility.initialY = 150m#uniform(220m, 250m)
+**.car[4].mobility.initialX = 145m# uniform(140m, 800m)
+**.car[4].mobility.initialY = 150m#uniform(220m, 250m)
+**.car[5].mobility.initialX = 165m# uniform(140m, 800m)
+**.car[5].mobility.initialY = 150m#uniform(220m, 250m)
+**.car[6].mobility.initialX = 850m# uniform(140m, 800m)
+**.car[6].mobility.initialY = 130m#uniform(220m, 250m)
+**.car[7].mobility.initialX = 870m# uniform(140m, 800m)
+**.car[7].mobility.initialY = 130m#uniform(220m, 250m)
+**.car[8].mobility.initialX = 850m# uniform(140m, 800m)
+**.car[8].mobility.initialY = 150m#uniform(220m, 250m)
+**.car[9].mobility.initialX = 870m# uniform(140m, 800m)
+**.car[9].mobility.initialY = 150m#uniform(220m, 250m)
 
 
 ##------------UEWarningAlertApp---------------
@@ -228,7 +247,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.ue[*].app[1].amsPort = 10022
 *.ue[*].app[1].deviceAppPort = 4500
 *.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue[*].app[1].stopTime = 30s
+*.ue[*].app[1].stopTime = 60s
 #
 *.ue[*].app[1].positionX = 340
 *.ue[*].app[1].positionY = 411
@@ -286,6 +305,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.mechost2.vim.vimApp.mp1Address = "mechost2.mecPlatform"
 *.mechost2.vim.vimapp.mp1port = 10021
 *.mechost*.vim.viApp.vimPort = 3333
+
+*.mechost*.vim.viApp.stateSize = ${STATEDIM=174B,1kB,10kB,100kB,1MB,10MB, 50MB, 100MB}
+*.car[*].viApp.stateSize = ${STATEDIM}
 
 
 # Mepm
